--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     </div>
 
     </section>
-    <section></section>
+    <section class="howitworks">
+
+        
+    </section>
     <section></section>
 </body>
 <script src="https://kit.fontawesome.com/9574254c13.js" crossorigin="anonymous"></script>
