--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
     </section>
-    <section class="Pricing">
+    <section class="pricing">
 <div class="card1">
 <h2>TENOR TROMBONE</h2>
 <h1>600$</h1>
