--- a/index.html
+++ b/index.html
@@ -94,3 +94,11 @@
 </body>
 <script src="https://kit.fontawesome.com/9574254c13.js" crossorigin="anonymous"></script>
 </html>
+<!--
+<nav id="nav-bar">
+    <ul>
+      <li > <a href="#features" class="nav-link"> Features</a></li>
+         <li > <a class="nav-link" href="#howitworks"> How It Works </a></li>
+            <li > <a class="nav-link" href="#pricing"> Pricing </a></li>
+               </ul>
+                </nav> -->
